k8s/scylladb-config.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: scylla
