k8s/valkey.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valkey
