k8s/example-service-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service-2
  template:
    metadata:
      labels:
        app: example-service-2
    spec:
      containers:
        - name: example-service-2
          image: example-service-2:latest
          imagePullPolicy: IfNotPresent
          tty: true
