k8s/example-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      containers:
        - name: example-service
          image: localhost:5000/example-service:latest
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: example-service
# spec:
#   selector:
#     app: example-service
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8080
#   type: ClusterIP
